made a random joke generator

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <div id="app"></div>
+  <button type="button" class="btn btn-primary" id="joke">Generate a Joke</button>
+  <div id="viewJoke"></div>
+  <div id="viewPunchline"></div>
 </body>
 </html>
